--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -82,7 +81,8 @@
                     android:drawablePadding="@dimen/activity_horizontal_margin"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:drawableStart="@drawable/ic_lock_outline" />
+                    android:drawableStart="@drawable/ic_lock_outline"
+                    android:importantForAutofill="no" />
 
             </android.support.design.widget.TextInputLayout>
 
