--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -33,15 +33,14 @@
                 android:paddingStart="@dimen/paddingsm"/>
                     </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:id="@+id/activity_show_images"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="120px"
+        android:paddingTop="120dp"
         tools:context="net.simplifiedcoding.firebaseupload.ShowImagesActivity">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
