Migrated project to androidx

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
                 android:textColor="@color/colorWhite"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"/>
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -62,9 +62,9 @@
                     android:drawableStart="@drawable/ic_email"
                     android:paddingEnd="@dimen/activity_horizontal_margin" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -84,7 +84,7 @@
                     android:drawableStart="@drawable/ic_lock_outline"
                     android:importantForAutofill="no" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/btnSignIn"
