--- a/app/src/main/res/layout/layout_agric_items.xml
+++ b/app/src/main/res/layout/layout_agric_items.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content">
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -59,7 +59,7 @@
                         android:textSize="@dimen/text_standard" />
                 </TableRow>
             </TableLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </ScrollView>
 
 </LinearLayout>
