--- a/app/src/main/res/layout/layout_items.xml
+++ b/app/src/main/res/layout/layout_items.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 <ScrollView android:layout_height="wrap_content"
     android:layout_width="wrap_content">
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -80,6 +80,6 @@
                 android:background="@color/colorGreen" />
             </TableRow>
         </TableLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 </ScrollView>
 </LinearLayout>
